fix(docs-infra): apply minor style fixes to aio contributor cards (#43844)
improve the aio contributors card by aligning centrally the
contributor's name and adding some padding so that it doesn't
get too close to the card's edges

Note: the name's aligning was already present by wrongly removed in
PR #43355

PR Close #43844

--- a/aio/src/styles/2-modules/contributor/_contributor.scss
+++ b/aio/src/styles/2-modules/contributor/_contributor.scss
@@ -106,6 +106,7 @@ aio-contributor {
 
     h3 {
       margin: 0.8rem 0;
+      text-align: center;
     }
 
     .card-front, .card-back {
@@ -119,6 +120,7 @@ aio-contributor {
       align-items: center;
       border: none;
       background: transparent;
+      padding: 0 1.5rem;
     }
 
     .card-back {
